Closed
Bug 1326292
Opened 9 years ago
Closed 9 years ago
Crash in mozilla::widget::WinCompositorWidget::ClearTransparentWindow
Categories
(Core :: Widget: Win32, defect, P4)
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: RyanVM, Assigned: tracy)
References
Details
(Keywords: crash, regression, Whiteboard: tpi:+)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
1021 bytes,
patch
|
tracy
:
review+
gchang
:
approval-mozilla-aurora+
jcristau
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #1284092 +++
Bug 1284092 apparently fixed one crash with this signature, but others remain. It's pretty low-frequency, though (~100 in the last 3 months). Most crashes are at 0x0, so maybe a null check is in order?
Updated•9 years ago
|
Assignee: nobody → twalker
Flags: needinfo?(twalker)
Whiteboard: tpi:? → tpi:+
| Reporter | ||
Comment 1•9 years ago
|
||
This missed the boat for 51 :(
Comment 2•9 years ago
|
||
We've been working on this as a side project, fwiw. Should have a fix up in the next couple weeks or so.
| Assignee | ||
Comment 3•9 years ago
|
||
Should this simple null check be put through try? If so, which tests should be run?
Flags: needinfo?(twalker)
Attachment #8834893 -
Flags: review?(jmathies)
Comment 4•9 years ago
|
||
Comment on attachment 8834893 [details] [diff] [review]
null check of drawTarget WindowCompositorWidget
Review of attachment 8834893 [details] [diff] [review]:
-----------------------------------------------------------------
::: widget/windows/WinCompositorWidget.cpp
@@ +281,5 @@
> IntSize size = mTransparentSurface->GetSize();
> if (!size.IsEmpty()) {
> RefPtr<DrawTarget> drawTarget =
> gfxPlatform::CreateDrawTargetForSurface(mTransparentSurface, size);
> + if (drawTarget == 0) {
nit-
if (!drawTarget) {
}
Attachment #8834893 -
Flags: review?(jmathies) → review+
| Assignee | ||
Comment 5•9 years ago
|
||
fixed nit carryover r+ from :jimm
Attachment #8834893 -
Attachment is obsolete: true
Attachment #8834944 -
Flags: review+
| Assignee | ||
Updated•9 years ago
|
Keywords: checkin-needed
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/171570725b69
Add null check of drawTarget in WinCompositorWidget.cpp, to avoid crash. r=jimm
Keywords: checkin-needed
Comment 7•9 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 9 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
| Reporter | ||
Comment 8•9 years ago
|
||
Please request Aurora/Beta approval on this when you get a chance.
Flags: needinfo?(twalker)
| Assignee | ||
Comment 9•9 years ago
|
||
Comment on attachment 8834944 [details] [diff] [review]
null check of drawTarget WindowCompositorWidget(2)
Approval Request Comment
[Feature/Bug causing the regression]:
[User impact if declined]: chance of crashing
[Is this code covered by automated tests?]: no
[Has the fix been verified in Nightly?]: no crashes had been reported against 54.0a1. we should see improvements on Aurora and Beta
[Needs manual test from QE? If yes, steps to reproduce]: no
[List of other uplifts needed for the feature/fix]: none
[Is the change risky?]: no
[Why is the change risky/not risky?]: it's a basic null dereference check
[String changes made/needed]: no
Flags: needinfo?(twalker)
Attachment #8834944 -
Flags: approval-mozilla-beta?
Attachment #8834944 -
Flags: approval-mozilla-aurora?
Comment 10•9 years ago
|
||
Comment on attachment 8834944 [details] [diff] [review]
null check of drawTarget WindowCompositorWidget(2)
Fix a crash. Aurora53+.
Attachment #8834944 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•9 years ago
|
||
| bugherder uplift | ||
Comment 12•9 years ago
|
||
Comment on attachment 8834944 [details] [diff] [review]
null check of drawTarget WindowCompositorWidget(2)
avoid null dereference, beta52+
Attachment #8834944 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 13•9 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Comment 15•9 years ago
|
||
| bugherder uplift | ||
status-firefox-esr52:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•