Bug 1326292 - Add null check of drawTarget in WinCompositorWidget.cpp, to avoid crash. r=jimm a=gchang

--HG--
extra : source : 171570725b697ca80261c6caf5acff88682b248c